test/Fail/VariableIsOfUnusableCohesion.err
VariableIsOfUnusableCohesion.agda:7.28-29: error: [VariableIsOfUnusableCohesion]
Variable A is declared Squash so it cannot be used here
when checking that the expression A has type _0
